--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/meufacilitador">
   <meta charset="utf-8">
-  <title>FrontMeufacilitador</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Meu Facilitador</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
